# hf-mjboothaus-titanic-databooth

./: .gitignore  README.md  README_Connection.md  pyproject.toml
app/: main.py  main_better_hf.py  main_hf.py
notebooks/: titanic.ipynb  titanic_marimo.py
src/huggingduck/: __init__.py  connection.py
utils/: clear_hf_cache.py
