[project]
name = "huggingduck"
version = "0.1.0"
description = "HuggingFace → DuckDB connection bridge"
readme = "README.md"
authors = [{ name = "Michael Booth", email = "michael@databooth.com.au" }]
requires-python = ">=3.13"
dependencies = [
    "datasets>=3.5.0",
    "duckdb>=1.2.2",
    "loguru>=0.7.3",
    "marimo>=0.13.1",
    "notebook>=7.4.1",
    "pandas>=2.2.3",
    "streamlit>=1.44.1",
    "watchdog>=6.0.0",
]

[project.scripts]
huggingduck = "huggingduck:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
